# uptime_rust

./: Cargo.toml  Dockerfile  README.md  fly.toml
.github/workflows/: restart.yml
src/: backoff.rs  check.rs  main.rs  notify.rs  url_json.rs
