[package]
name = "uptime-check"
version = "0.1.2"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
chrono = { version = "0.4.42", features = ["serde"] }
memcache = { version = "0.19.0", default-features = false }
reqwest = { version = "0.12.24", features = ["json", "gzip", "brotli", "http2", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
env_logger = "0.11.8"
log = "0.4.28"
futures = "0.3.31"
rand = "0.9.2"
md5 = "0.8.0"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z" 
lto = true
codegen-units = 1
panic = "abort"
